--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    Olá Mundo! Este é o meu primeiro site!<br>
+    <pr>Olá, Mundo! Este é o meu primeiro site!</pr>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aut neque, facilis tempore veniam consequuntur blanditiis eligendi facere quidem vel placeat porro, quisquam nihil necessitatibus aliquam nesciunt tempora delectus? Nemo totam molestiae ipsam quo sint recusandae dolorum quae. Maxime, libero sit dolores totam beatae aliquid quos rerum eum velit quod laudantium?</p>
     <img src="tigre.jpg" alt="" width="360px">
 </body>
 </html>
